--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
     margin: 0;
     padding: 0;
 }
+.navbar{
+    transform: translateY(90%);
+}
 .header{
     background-image: url("img/hotel-front.jpg");
     height: 100vh;
@@ -28,6 +31,12 @@
 .navbar .search-button{
     background-color: orange;
     border: none;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    white-space: nowrap;
+    color: black;
 }
 .banner{
     color: white;
