--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
+@font-face {
+    font-family: Chapaza;
+    src: url("font/Chapaza.ttf");
+}
 *{
     margin: 0;
     padding: 0;
+    font-family: Chapaza;
 }
 .navbar{
     transform: translateY(90%);
@@ -44,13 +49,18 @@
 .banner{
     color: white;
     text-align: center;
-    transform: translateY(600%);
+    /*transform: translateY(600%);*/
+    padding-top: 20%;
     font-family: Arial;
     position: relative;
 }
+.banner h1{
+    justify-content: space-between;
+    font-size: 60px;
+}
 .overlay-timer{
     background-color: #120D40;
-    opacity: .7;
+    opacity: .8;
     position: absolute;
     left: 0;
     right: 0;
@@ -66,8 +76,10 @@
     height: 15vh;
     position: relative;
     z-index: 1;
-    transform: translate(10%, 350%);
+    /*transform: translate(10%, 350%);*/
     padding: 10px 10px 10px 10px;
+    margin-left: 10%;
+    margin-top: 5%;
 }
 .timer h6{
     color: white;
@@ -77,9 +89,15 @@
     border: 2px solid yellow;
     width: 80%;
     color: white;
-    margin-top: 20px;
-    padding-left: 3px;
-    padding-top: 5px;
+    margin-top: 5%;
+    padding-left: 3%;
+    padding-top: 3%;
+}
+@media screen and (max-width: 800px) {
+    .container-arrival, .timer button, .timer{
+        /*font-size: 10px;*/
+        visibility: hidden;
+    }
 }
 .guest, .children{
     color: white;
@@ -87,10 +105,8 @@
     padding-left: 15px;
     padding-top: 5px;
 }
-.timer-button{
-    padding-top: 30px;
-}
-.timer-button button{
+.timer button{
+    margin-top: 20px;
     background-color: orange;
     border: none;
     color: black;
@@ -117,14 +133,23 @@
 .card1{
     background-image: url("img/Test-job.jpg");
     height: 70vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .card2{
     background-image: url("img/Test-job2.jpg");
     height: 70vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .card3{
     background-image: url("img/Test-job3.jpg");
     height: 70vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .semibanner{
     margin-top: 3vh;
@@ -138,8 +163,8 @@
 
 }
 .semibanner-overlay{
-    background-color: #120D40;
-    opacity: .7;
+    background-color: #241E68;
+    opacity: .8;
     height: 90vh;
     position: absolute;
     left: 0;
@@ -171,14 +196,17 @@
 .foodbanner-s2 h2{
     padding-top: 20%;
     padding-bottom: 5%;
-    color: #120D40;
+    color: #312782;
 }
 .foodbanner-s2 p{
     padding-bottom: 10%;
 }
 .foodbanner-s2 button{
-    background-color: #120D40;
+    background-color: #312782;
     color: white;
+    padding-left: 4%;
+    padding-right: 4%;
+
 }
 .middle-banner{
     background-image: url("img/office-banner.jpg");
@@ -200,4 +228,137 @@
     background-size: cover;
     opacity: .5;
 }
+.middle-image-content h1{
+    text-align: center;
+    color: white;
+    padding-top: 20%;
+}
+.middle-image-content p{
+    text-align: center;
+    color: white;
+    padding-top: 10%;
+}
+.advertisement{
+    background-color: #F8F7F7;
+    height: 100vh;
+}
+.headerline h2 {
+    text-align: center;
+    padding-bottom: 3%;
+    padding-top: 2%;
+    color: #312782;
+}
+.image-of-advertisement{
+    background-image: url("img/nextbanner.jpg");
+    height: 65vh;
+    margin-left: 20%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.image-of-advertisement2{
+    background-image: url("img/30%-off.jpg");
+    height: 30vh;
+    margin-right: 20%;
+    /*padding-bottom: 5%;*/
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.image-of-advertisement3{
+    background-image: url("img/40%-off.jpg");
+    height: 30vh;
+    margin-right: 20%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: 5%;
+}
 
+.man-talking{
+    background-image: url("img/man-in-phone.jpg");
+    height: 80vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+.man-content{
+    text-align: center;
+}
+.man-content h2{
+    padding-top: 10%;
+    padding-bottom: 10%;
+}
+.man-content p{
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-bottom: 5%;
+}
+.man-content button{
+    background-color: #312782;
+    color: white;
+    padding-left:10%;
+    padding-right: 10%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    border: none;
+}
+.map-image{
+    background-image: url("img/map.jpg");
+    height: 70vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+.map-content{
+    padding-top: 5%;
+    padding-left: 10%;
+}
+.map-content img{
+    padding-bottom: 3%;
+
+}
+.map-content input{
+    background-color: #EBEBEB;
+    margin-bottom: 3%;
+    border-radius: 2px;
+    text-align: center;
+    border: none;
+    width: 50%;
+    border: none;
+    padding: 10px 10px 10px 10px;
+
+}
+.map-content button{
+    background-color: #312782;
+    color: white;
+    border: none;
+}
+@media screen and (max-width: 800px) {
+    .map , .man-content , p,h3, button, input, img{
+       text-align: center;
+        align-content: center;
+    }
+}
+.footer-section{
+    background-color: #120D40;
+    height: 20vh;
+    color: white;
+    text-align: center;
+}
+.footer-section h3 {
+    padding-top: 2%;
+    padding-bottom: 1%;
+}
+.semi-footer{
+    height: 7vh;
+    background-color: #08042A;
+    color: white;
+    text-align: center;
+    padding-bottom: 0;
+    margin-bottom: 0;
+    padding-top: 12px;
+}
+.footer-section .fa-twitter, .fa-instagram-square, .fa-youtube{
+    padding-left: 20px;
+}
